--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.14.0",
+        "bulma": "^0.9.0"
     }
 }
