--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.idea/
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -10,6 +11,7 @@
 ###< symfony/framework-bundle ###
 
 ###> symfony/webpack-encore-bundle ###
+
 /node_modules/
 /public/build/
 npm-debug.log
