--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,6 +36,7 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_EDITOR }
 
     role_hierarchy:
-        #ROLE_MANAGER: []
+        ROLE_ADMIN: [ROLE_EDITOR, ROLE_USER]
