--- a/.env
+++ b/.env
@@ -27,3 +27,13 @@ APP_SECRET=e70b2cf0b2bff05832c8efb569b48c5a
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/sendgrid-mailer ###
+MAILER_DSN=sendgrid://$SENDGRIG_KEY@default
+SENDGRIG_KEY=KEY
+DEFAULT_RECIPIENT=johndoe@example.com
+###< symfony/sendgrid-mailer ###
