Création du service de confirmation de compte par envoi d'email

--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.
 ###< symfony/mailer ###
 
 ###> symfony/sendgrid-mailer ###
-MAILER_DSN=sendgrid://$SENDGRIG_KEY@default
-SENDGRIG_KEY=KEY
+SENDGRID_KEY=KEY
+MAILER_DSN=sendgrid://$SENDGRID_KEY@default
 DEFAULT_RECIPIENT=johndoe@example.com
 ###< symfony/sendgrid-mailer ###
